add test and fix swagger doc
